# keyphrase_extraction_tools

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ruff_pyright_check.yml
dataset/evaluation/: LICENSE  README.md  dataset.json  label.json
dataset/sample/: ABEJA_Techblog.md
module/: README.md  pyproject.toml
module/src/keyphrase_extractors/: __init__.py  base_extractor.py  io_data.py  stop_words.txt
module/src/keyphrase_extractors/embedding_based/: __init__.py  data.py  extractor.py  model.py
module/src/keyphrase_extractors/evaluate/: __init__.py  data.py  dataloader.py  evaluator.py  pipeline.py  summarize_results.py
module/src/keyphrase_extractors/generation_based/: __init__.py  data.py  extractor.py
module/src/keyphrase_extractors/generation_based/prompt_texts/: japanese_keyphrase_extraction.txt
module/src/keyphrase_extractors/graph_based_or_statistical/: __init__.py  extractor.py
module/src/keyphrase_extractors/utils/: __init__.py  text_preprocessor.py  utilities.py
module/src/typings/: neologdn.pyi
module/src/typings/keybert/: _maxsum.pyi  _mmr.pyi
module/src/typings/nltk/: __init__.pyi
module/src/typings/pke/: base.pyi
module/src/typings/sklearn/feature_extraction/: text.pyi
module/src/typings/sklearn/metrics/: pairwise.pyi
tests/: _evaluation.py  _summarize_result.py  test_classical_extractor.py  test_embedding_based_extrctor.py  test_evaluation.py  test_llm_extractor.py
