[tool.poetry]
name = "keyphrase_extractors"
version = "0.1.0"
description = "Keyphrase extraction tools in Japanese"
authors = ["flatton <flatton211@gmail.com>"]
readme = "README.md"
packages = [{ include = "keyphrase_extractors", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.8.2"
neologdn = "^0.5.3"
ja-ginza = "^5.2.0"
pke = { git = "https://github.com/boudinfl/pke.git" }
keybert = "^0.8.5"
sentencepiece = "^0.2.0"
fugashi = "^1.4.0"
unidic-lite = "^1.0.8"
# numpy = "1.26.4"
# protobuf = "^5.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
